<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:id="@+id/iv_property_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:textColor="@android:color/holo_blue_bright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vPostDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@+id/iv_property_image"
            tools:layout_editor_absoluteX="-37dp" />

        <TextView
            android:id="@+id/vAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress"
            app:layout_constraintTop_toBottomOf="@+id/vPostDate"
            tools:layout_editor_absoluteX="-16dp" />

        <TextView
            android:id="@+id/vDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/vAddress"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/vAdditionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vDescription"
            tools:layout_editor_absoluteX="-16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>